# photoflow

./: Cargo.toml  LICENSE  README.md
res/: circular-progress-bar.slint  every-frame-timer.slint  gamepad.slint  image-grid.slint  label.slint  loading-indicator.slint  main.slint  media-viewer.slint  spring-animation.slint  spring-animator.slint  vertical-scrollable.slint  video-hud.slint
src/: config.rs  db.rs  exif_orientation.rs  image_loader.rs  img_decoder.rs  main.rs  util.rs  winit.rs
src/gamepad_input/: filter_dpad_button_events.rs  keymap.rs  mod.rs
src/index_cmd/: metadata.rs  mod.rs
src/indexer/: filehash.rs  media_decoder.rs  metadata.rs  mod.rs  preview.rs  preview_loader.rs  thumbnail.rs
src/load_cmd/: image_grid_model.rs  mod.rs  view_model.rs
src/media/: media_type.rs  metadata.rs  mod.rs
src/video/: bus_msg_handler.rs  gl_context_slint.rs  mod.rs  pipeline.rs  pipeline_ext.rs
src/video_loader/: mod.rs
src/viewer/: image_grid_model.rs  media_loader.rs  mod.rs  playing_video.rs
src/viewer/player/: framebuffer.rs  gl_context_slint.rs  gst_bus_gl_sync.rs  mod.rs  pipeline.rs
src/viewer/video_loader/: framebuffer.rs  mod.rs
