[package]
name = "photoflow"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland"]
wayland = ["slint/backend-winit-wayland", "dep:gstreamer-gl-egl", "glutin_egl_sys"]
x11 = ["slint/backend-winit-x11", "dep:gstreamer-gl-x11", "glutin_glx_sys"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
gilrs = "0.11"
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"
gstreamer-gl = "0.24"
image = "0.25"
i-slint-backend-winit = "=1.13.1"
libheif-rs = { version = "2.2", default-features = false, features = ["v1_17"] }
nom-exif = "2.5"
rayon = "1.10"
rusqlite = "0.37"
serde = "1.0"
serde_derive = "1.0"
slint = { version = "=1.13.1", default-features = false, features = ["renderer-femtovg", "compat-1-2"] }
toml = "0.9"
walkdir = "2.5"
xdg = "3"
gstreamer-gl-egl = { version = "0.24", optional = true }
glutin_egl_sys = { version = "0.7", optional = true }
gstreamer-gl-x11 = { version = "0.24", optional = true }
glutin_glx_sys = { version = "0.6", optional = true }


[build-dependencies]
slint-build = "=1.13.1"